
	Added B key to menus, which acts like b, but creates unsorted (very
	custom) view.  Thanks to filterfalse.

	Added match numbers to search messages on status bar.  Patch by Cosmin
	Popescu (a.k.a. cosminadrianpopescu).

	Added exclamation mark to :shell to suppress spawning new teminal
	multiplexer pane.  Patch by Cosmin Popescu (a.k.a. cosminadrianpopescu).

	Do not finish argument parsing after finding --help or --version,
	continue and validate the rest of command-line.  Thanks to Svyatoslav
	Mishyn (a.k.a. juef).

	Warn about --remote command being disabled at build-time.  Thanks to
	Svyatoslav Mishyn (a.k.a. juef).

	Make --select option more prominent in documentation.  Thanks to
	Svyatoslav Mishyn (a.k.a. juef).

	Accept [count] for "h" and "gh".

	Normalize surrounding spaces in menu and dialog titles.

	Work around compilation on systems where MAX_ARG_STRLEN is defined, but
	unusable.  Thanks to Marcin Juszkiewicz (a.k.a. hrw).

	Document %= for 'statusline' and 'rulerformat'.

	Proper recovery from loading of color scheme unsupported by the terminal
	at startup.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Automatically create ~/.vifm/scripts containing small README file if the
	directory doesn't exist on startup.  Thanks to fogine.

	Consider control message when deciding width for a dialog, also don't let
	it disappear on narrow terminals.

	Provide conflict resolution options in a dialog rather than on the
	command-line, which is hard to read with so many options.

	Choose "middle" of the list of even length closer to the top (M key).
	Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Update cursor position on file disappearing in more predictable way.
	Use the closes file to the previously active one that still exists.
	Thanks to ranousse.

	Make :set, :filter and :normal zo (and alike) in vifmrc affect all views,
	thus obsoleting use of :winrun or :windo for this purpose (they still