@@ -1,4 +1,4 @@
-.TH VIFM 1 "August 10, 2015" "vifm 0.8"
+.TH VIFM 1 "August 13, 2015" "vifm 0.8"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -3348,8 +3348,8 @@ type: local
 .br
 Sets list of sorting keys (first item is primary key, second is secondary key,
 etc.):
-   [+\-]ext     \- extension
-   [+\-]fileext \- extension (ignore folders)
+   [+\-]ext     \- extension of files and directories
+   [+\-]fileext \- extension of files only
    [+\-]name    \- name (including extension)
    [+\-]iname   \- name (including extension, ignores case)
    [+\-]type    \- file type (dir/reg/exe/link/char/block/sock/fifo)
