@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.8  Last change: 2015 Aug 10
+*vifm-app.txt*    For Vifm version 0.8  Last change: 2015 Aug 13
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -2798,21 +2798,22 @@ local
 
 Sets list of sorting keys (first item is primary key, second is secondary
 key, etc.):
-   [+-]ext   - extension
-   [+-]name  - name (including extension)
-   [+-]iname - name (including extension, ignores case)
-   [+-]type  - file type (dir/reg/exe/link/char/block/sock/fifo)
-   [+-]dir   - directory grouping (directory < file)
-   [+-]gid   - group id (*nix only)
-   [+-]gname - group name (*nix only)
-   [+-]mode  - file mode (file type + permissions) in octal (*nix only)
-   [+-]perms - permissions string (*nix only)
-   [+-]uid   - owner id (*nix only)
-   [+-]uname - owner name (*nix only)
-   [+-]size  - size
-   [+-]atime - time accessed (e.g. read, executed)
-   [+-]ctime - time changed (changes in metadata, e.g. mode)
-   [+-]mtime - time modified (when file contents is changed)
+   [+-]ext     - extension of files and directories
+   [+-]fileext - extension of files only
+   [+-]name    - name (including extension)
+   [+-]iname   - name (including extension, ignores case)
+   [+-]type    - file type (dir/reg/exe/link/char/block/sock/fifo)
+   [+-]dir     - directory grouping (directory < file)
+   [+-]gid     - group id (*nix only)
+   [+-]gname   - group name (*nix only)
+   [+-]mode    - file mode (file type + permissions) in octal (*nix only)
+   [+-]perms   - permissions string (*nix only)
+   [+-]uid     - owner id (*nix only)
+   [+-]uname   - owner name (*nix only)
+   [+-]size    - size
+   [+-]atime   - time accessed (e.g. read, executed)
+   [+-]ctime   - time changed (changes in metadata, e.g. mode)
+   [+-]mtime   - time modified (when file contents is changed)
 
 Note: look for st_atime, st_ctime and st_mtime in "man 2 stat" for more
 information on time keys.
