@@ -92,7 +92,8 @@ static void format_name(int id, const void *data, size_t buf_len, char buf[]);
 static void format_size(int id, const void *data, size_t buf_len, char buf[]);
 static void format_type(int id, const void *data, size_t buf_len, char buf[]);
 static void format_ext(int id, const void *data, size_t buf_len, char buf[]);
-static void format_fileext(int id, const void *data, size_t buf_len, char buf[]);
+static void format_fileext(int id, const void *data, size_t buf_len,
+		char buf[]);
 static void format_time(int id, const void *data, size_t buf_len, char buf[]);
 static void format_dir(int id, const void *data, size_t buf_len, char buf[]);
 #ifndef _WIN32
@@ -120,8 +121,8 @@ fview_init(void)
 		{ SK_BY_SIZE,  &format_size },
 		{ SK_BY_TYPE,  &format_type },
 
-		{ SK_BY_FILEEXT,       &format_fileext },
 		{ SK_BY_EXTENSION,     &format_ext },
+		{ SK_BY_FILEEXT,       &format_fileext },
 		{ SK_BY_TIME_ACCESSED, &format_time },
 		{ SK_BY_TIME_CHANGED,  &format_time },
 		{ SK_BY_TIME_MODIFIED, &format_time },
@@ -1059,7 +1060,7 @@ format_type(int id, const void *data, size_t buf_len, char buf[])
 	snprintf(buf, buf_len, " %s", get_type_str(entry->type));
 }
 
-/* File extension format callback for column_view unit. */
+/* File or directory extension format callback for column_view unit. */
 static void
 format_ext(int id, const void *data, size_t buf_len, char buf[])
 {
@@ -1071,15 +1072,14 @@ format_ext(int id, const void *data, size_t buf_len, char buf[])
 	copy_str(buf, buf_len + 1, ext);
 }
 
+/* File-only extension format callback for column_view unit. */
 static void
 format_fileext(int id, const void *data, size_t buf_len, char buf[])
 {
 	const column_data_t *cdt = data;
 	dir_entry_t *entry = &cdt->view->dir_entry[cdt->line_pos];
 
-	const char *type = is_directory_entry(entry) ? "dir" : "file";
-	snprintf(buf, buf_len, " %s", type);
-	if (!is_directory_entry(entry))
+	if(!is_directory_entry(entry))
 	{
 		format_ext(id, data, buf_len, buf);
 	}
